--- a/index.html
+++ b/index.html
@@ -1,63 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
   <title>Bowen</title>
 </head>
 
 <body>
+
   <h1>Bowen</h1>
-
-  <!-- Simple blue-link navigation -->
-  <p>
-    <a href="#intro">Intro</a> |
-    <a href="#blog">Blog</a> |
-    <a href="#math">Math</a> |
-    <a href="#cs">Computer Science</a> |
-    <a href="#misc">Miscellaneous</a>
-  </p>
+  <p>Mathematics and Computer Science</p>
 
   <hr>
 
-  <!-- Sections -->
-  <h2 id="intro">Intro</h2>
   <p>
-    Welcome to my personal website. I study mathematics and computer science.
-    (Write more here.)
+    <a href="intro.html">Intro</a><br><br>
+    <a href="blog.html">Blog</a><br><br>
+    <a href="math.html">Math</a><br><br>
+    <a href="cs.html">Computer Science</a><br><br>
+    <a href="misc.html">Miscellaneous</a>
   </p>
 
-  <h2 id="blog">Blog</h2>
-  <p>Coming soon.</p>
-  <!-- Example list of posts -->
-  <ul>
-    <li><a href="#">2026-02-14 — First post (placeholder)</a></li>
-  </ul>
-
-  <h2 id="math">Math</h2>
-  <p>Notes and problem solving.</p>
-  <ul>
-    <li><a href="#">Graph Theory</a></li>
-    <li><a href="#">Combinatorics / Ramsey Theory</a></li>
-    <li><a href="#">Random Graphs</a></li>
-  </ul>
-
-  <h2 id="cs">Computer Science</h2>
-  <p>Projects and code.</p>
-  <ul>
-    <li><a href="#">Data Structures notes</a></li>
-    <li><a href="#">Algorithms</a></li>
-    <li><a href="#">GitHub projects</a></li>
-  </ul>
-
-  <h2 id="misc">Miscellaneous</h2>
-  <p>Anything else: reading notes, links, hobbies, etc.</p>
-  <ul>
-    <li><a href="#">Books / Courses</a></li>
-    <li><a href="#">Useful links</a></li>
-  </ul>
-
-  <hr>
-  <p>© Bowen</p>
 </body>
 </html>
