--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <h1>Bowen</h1>
-  <p>Mathematics and Computer Science</p>
+  <p>Applied math at UofT, interested in combinatorics, CS Theory, coding Theory</p>
 
   <hr>
 
