--- a/math.html
+++ b/math.html
@@ -12,10 +12,73 @@
   <p>Notes and problem solving.</p>
 
   <ul>
-    <li>Graph Theory</li>
-    <li>Combinatorics</li>
-    <li>Random Graphs</li>
-  </ul>
+
+  <li>
+    <b>Graph Theory</b>
+    <ul>
+      <li>
+        <a href="pdf/Graph_Question_Book.pdf" target="_blank">
+          Graph Question Book
+        </a>
+      </li>
+    </ul>
+  </li>
+
+  <li>
+    <b>Combinatorics</b>
+    <ul>
+      <li>
+        <a href="pdf/Counting.pdf" target="_blank">
+          Counting Notes
+        </a>
+      </li>
+      <li>
+        <a href="pdf/Algebra_Numbers_Combinatorics.pdf" target="_blank">
+          Algebra, Numbers & Combinatorics
+        </a>
+      </li>
+      <li>
+        <a href="pdf/MAT344_Notes.pdf" target="_blank">
+          MAT344 Notes
+        </a>
+      </li>
+    </ul>
+  </li>
+
+  <li>
+    <b>Random Graphs / Probability</b>
+    <ul>
+      <li>
+        <a href="pdf/APM461_Notes.pdf" target="_blank">
+          APM461 Notes
+        </a>
+      </li>
+    </ul>
+  </li>
+
+  <li>
+    <b>Algebra / Inequalities</b>
+    <ul>
+      <li>
+        <a href="pdf/Elementary%20Algebra.pdf" target="_blank">
+          Elementary Algebra
+        </a>
+      </li>
+      <li>
+        <a href="pdf/Inequality.pdf" target="_blank">
+          Inequality Notes
+        </a>
+      </li>
+      <li>
+        <a href="pdf/MAT327_Notes.pdf" target="_blank">
+          MAT327 Notes
+        </a>
+      </li>
+    </ul>
+  </li>
+
+</ul>
+
 
   <p><a href="index.html">Back to Home</a></p>
 
