--- a/math.html
+++ b/math.html
@@ -14,17 +14,6 @@
   <ul>
 
   <li>
-    <b>Graph Theory</b>
-    <ul>
-      <li>
-        <a href="pdf/Graph_Question_Book.pdf" target="_blank">
-          Graph Question Book
-        </a>
-      </li>
-    </ul>
-  </li>
-
-  <li>
     <b>Combinatorics</b>
     <ul>
       <li>
@@ -45,6 +34,17 @@
     </ul>
   </li>
 
+    <li>
+    <b>Graph Theory</b>
+    <ul>
+      <li>
+        <a href="pdf/Graph_Question_Book.pdf" target="_blank">
+          Graph Question Book
+        </a>
+      </li>
+    </ul>
+  </li>
+    
   <li>
     <b>Random Graphs / Probability</b>
     <ul>
@@ -69,6 +69,12 @@
           Inequality Notes
         </a>
       </li>
+    </ul>
+  </li>
+
+    <li>
+    <b>Topology</b>
+    <ul>
       <li>
         <a href="pdf/MAT327_Notes.pdf" target="_blank">
           MAT327 Notes
