--- a/math.html
+++ b/math.html
@@ -27,7 +27,7 @@
         </a>
       </li>
       <li>
-        <a href="pdf/MAT344_Notes.pdf" target="_blank">
+        <a href="pdf/Intro_to_Combinatorics.pdf" target="_blank">
           MAT344 Notes
         </a>
       </li>
@@ -38,7 +38,7 @@
     <b>Graph Theory</b>
     <ul>
       <li>
-        <a href="pdf/Graph_Question_Book.pdf" target="_blank">
+        <a href="pdf/Intro_to_Graph.pdf" target="_blank">
           Graph Question Book
         </a>
       </li>
@@ -49,7 +49,7 @@
     <b>Random Graphs / Probability</b>
     <ul>
       <li>
-        <a href="pdf/APM461_Notes.pdf" target="_blank">
+        <a href="pdf/Advance_Combinatorics.pdf" target="_blank">
           APM461 Notes
         </a>
       </li>
