--- a/math.html
+++ b/math.html
@@ -1,92 +1,95 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Math - Bowen</title>
-</head>
+<ul>
 
-<body>
-
-  <h1>Math</h1>
-
-  <p>Notes and problem solving.</p>
-
-  <ul>
-
+  <!-- Combinatorics -->
   <li>
     <b>Combinatorics</b>
     <ul>
-      <li>
-        <a href="pdf/Counting.pdf" target="_blank">
-          Counting Notes
-        </a>
-      </li>
-      <li>
-        <a href="pdf/Algebra_Numbers_Combinatorics.pdf" target="_blank">
-          Algebra, Numbers & Combinatorics
-        </a>
-      </li>
-      <li>
-        <a href="pdf/Intro_to_Combinatorics.pdf" target="_blank">
-          MAT344 Notes
-        </a>
-      </li>
-    </ul>
-  </li>
 
-    <li>
-    <b>Graph Theory</b>
-    <ul>
-      <li>
-        <a href="pdf/Intro_to_Graph.pdf" target="_blank">
-          Graph Question Book
-        </a>
-      </li>
-    </ul>
-  </li>
-    
-  <li>
-    <b>Random Graphs / Probability</b>
-    <ul>
       <li>
         <a href="pdf/Advance_Combinatorics.pdf" target="_blank">
-          APM461 Notes
+          Advanced Combinatorics
         </a>
       </li>
+
+      <li>
+        <a href="pdf/Intro_to_Combinatorics.pdf" target="_blank">
+          Introduction to Combinatorics
+        </a>
+      </li>
+
+      <li>
+        <a href="pdf/Counting.pdf" target="_blank">
+          Counting
+        </a>
+      </li>
+
+      <li>
+        <a href="pdf/Algebra_Numbers_Combinatorics.pdf" target="_blank">
+          Algebra, Numbers, and Combinatorics
+        </a>
+      </li>
+
     </ul>
   </li>
 
+
+  <!-- Inequality -->
   <li>
-    <b>Algebra / Inequalities</b>
+    <b>Inequality</b>
     <ul>
-      <li>
-        <a href="pdf/Elementary_Algebra.pdf" target="_blank">
-          Elementary Algebra
-        </a>
-      </li>
+
       <li>
         <a href="pdf/Inequality.pdf" target="_blank">
           Inequality Notes
         </a>
       </li>
+
     </ul>
   </li>
 
-    <li>
-    <b>Topology</b>
+
+  <!-- Algebra -->
+  <li>
+    <b>Algebra</b>
     <ul>
+
       <li>
-        <a href="pdf/Intro_to_Topology.pdf" target="_blank">
-          MAT327 Notes
+        <a href="pdf/Elementary_Algebra.pdf" target="_blank">
+          Elementary Algebra
         </a>
       </li>
+
+    </ul>
+  </li>
+
+
+  <!-- Graph Theory -->
+  <li>
+    <b>Graph Theory</b>
+    <ul>
+
+      <li>
+        <a href="pdf/Intro_to_Graph.pdf" target="_blank">
+          Introduction to Graph Theory
+        </a>
+      </li>
+
+    </ul>
+  </li>
+
+
+  <!-- Topology -->
+  <li>
+    <b>Topology</b>
+    <ul>
+
+      <li>
+        <a href="pdf/Intro_to_Topology.pdf" target="_blank">
+          Introduction to Topology
+        </a>
+      </li>
+
     </ul>
   </li>
 
 </ul>
-
-
-  <p><a href="index.html">Back to Home</a></p>
-
-</body>
-</html>
