--- a/math.html
+++ b/math.html
@@ -7,7 +7,7 @@
 
       <li>
         <a href="pdf/Advance_Combinatorics.pdf" target="_blank">
-          Advanced Combinatorics
+          Advance Combinatorics
         </a>
       </li>
 
