--- a/index.html
+++ b/index.html
@@ -20,5 +20,11 @@
     <a href="misc.html">Miscellaneous</a>
   </p>
 
+  <div style="text-align:center; margin-top:40px;">
+  <img src="images/spongebob.jpg"
+       alt="Spongebob"
+       width="300">
+</div>
+
 </body>
 </html>
