--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@ Personal study journal. Notes to future me.
 
 <p>
 Today I reviewed the definition of G(n,p) and how to compute the
-expected number of triangles.
+expected number of triangles. I initially attempted via adjacency matrix, since we can compute closed walks via eigenvalues
 </p>
 
 <p>
@@ -40,7 +40,7 @@ Still confused about the covariance terms.
 <!-- 2026-02-10 -->
 <!-- ========================= -->
 
-<h2>2026-02-10 — Arzelà–Ascoli</h2>
+<h2>2026-02-07 — Arzelà–Ascoli</h2>
 
 <p><i>Topic: Compactness in C(K)</i></p>
 
